Add msgs and srv

--- a/rto_msgs/CMakeLists.txt
+++ b/rto_msgs/CMakeLists.txt
@@ -32,4 +32,22 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/AnalogReadings.msg"
+  "msg/DigitalReadings.msg"
+  "msg/GrapplerReadings.msg"
+  "msg/MotorReadings.msg"
+  "msg/PowerReadings.msg"
+  "msg/SetGrapplerAxes.msg"
+  "msg/BHAReadings.msg"
+  "msg/EncoderReadings.msg"
+  "msg/GripperState.msg"
+  "msg/NorthStarReadings.msg"
+  "msg/SetBHAPressures.msg"
+  "msg/SetGrapplerAxis.msg"
+  "srv/ResetOdometry.srv"
+  "srv/SetEncoderPosition.srv"
+  "srv/SetGripperState.srv"
+)
+
 ament_package()
