--- a/rto_node/CMakeLists.txt
+++ b/rto_node/CMakeLists.txt
@@ -28,6 +28,8 @@ find_package(nav_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(RobotinoAPI2 REQUIRED)
 find_package(rto_msgs REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -63,7 +65,7 @@ target_link_libraries(
 )
 
 
-ament_target_dependencies(rto_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros nav_msgs) 
+ament_target_dependencies(rto_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros nav_msgs builtin_interfaces) 
 
 add_executable(
   rto_laserrangefinder_node
@@ -73,7 +75,7 @@ add_executable(
   src/RTOLaserRangeFinderNode.cpp
 )
 
-ament_target_dependencies(rto_laserrangefinder_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros) 
+ament_target_dependencies(rto_laserrangefinder_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros builtin_interfaces) 
 
 
 target_link_libraries(
@@ -89,7 +91,7 @@ add_executable(
   src/RTOCameraNode.cpp
 )
 
-ament_target_dependencies(rto_camera_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros) 
+ament_target_dependencies(rto_camera_node rclcpp rto_msgs std_msgs geometry_msgs sensor_msgs tf2 tf2_ros builtin_interfaces) 
 
 target_link_libraries(
   rto_camera_node
