--- a/rto_msgs/package.xml
+++ b/rto_msgs/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>builtin_interfaces</depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
